Lisätty interceptor, joka lisää requestiin CSRF-headerin

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -98,7 +98,7 @@
     <script type="text/javascript" src="../common/modules/oph-roles/myroles.js"></script>
 
     <script type="text/javascript" src="../common/modules/oph.localisation/localisation.js"></script>
-
+    <script type="text/javascript" src="app-csrf-header.js"></script>
 
     <!--Virkailija layout script -->
 
